--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -11,7 +11,8 @@
       </ul>
     </nav>
     <div class="user-access">
-      <a href="#">Login</a>
-      <a href="#">Cadastre-se</a>
+      <a href="#">ADM</a>
+      <a href="#">Professor</a>
+      <a href="#">Student</a>
     </div>
   </header>
