--- a/crud_escola/src/main/resources/templates/index.html
+++ b/crud_escola/src/main/resources/templates/index.html
@@ -8,18 +8,7 @@
 </head>
 <body>
     <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
-    <footer>
-        <div class="footer-content">
-          <h2>Entre em contato</h2>
-          <p>Endereço: Av. Principal, 1234</p>
-          <p>Email: contato@escolaxyz.com</p>
-          <p>Telefone: (00) 1234-5678</p>
-        </div>
-        <video autoplay loop muted>
-          <source src="video.mp4" type="video/mp4">
-          Desculpe, seu navegador não suporta vídeos HTML5 com reprodução automática.
-        </video>
-      </footer>
 
+    <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
 </body>
 </html>
