--- a/crud_escola/src/main/resources/static/style.css
+++ b/crud_escola/src/main/resources/static/style.css
@@ -41,13 +41,50 @@ body {
     color: #ffd700;
   }
   
-  .user-access a {
+  .accesso a {
     color: #fff;
     text-decoration: none;
     margin-left: 20px;
   }
-  
-  .user-access a:hover {
+  .accesso  {
+    display: flex;
+  }
+  .accesso a:hover {
     color: #ffd700;
+  }
+  .carousel-container {
+    position: relative;
+    max-width: 600px; /* ajuste conforme necessário */
+    margin: 0 auto;
+  }
+  
+  .carousel {
+    display: flex;
+    overflow: hidden;
+  }
+  
+  .carousel img {
+    width: 100%;
+    transition: transform 0.5s ease;
+  }
+  
+  .prev-btn, .next-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    z-index: 1;
+  }
+  
+  .prev-btn {
+    left: 0;
+  }
+  
+  .next-btn {
+    right: 0;
   }
   
