--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -10,7 +10,7 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
-    <div class="user-access">
+    <div class="accesso">
       <a href="#">ADM</a>
       <a href="#">Professor</a>
       <a href="#">Student</a>
