--- a/crud_escola/src/main/resources/templates/index.html
+++ b/crud_escola/src/main/resources/templates/index.html
@@ -5,10 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Escola XYZ</title>
   <link rel="stylesheet" th:href="@{style.css}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
-
+    <div class="carousel-container">
+      <div class="carousel">
+        <img th:src="@{foto1.jpg}" alt="Imagem 1">
+        <img th:src="@{foto2.jpg}" alt="Imagem 1">
+        <img th:src="@{foto3.jpg}" alt="Imagem 1">
+      </div>
+      <button class="prev-btn">&#10094;</button>
+      <button class="next-btn">&#10095;</button>
+    </div>
+    
     <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
 </body>
+<script th:rc="@{script.js}"></script>
 </html>
