--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -11,7 +11,7 @@
       </ul>
     </nav>
     <div class="accesso">
-      <a href="#">ADM</a>
+      <a href="/login-amd">ADM</a>
       <a href="#">Professor</a>
       <a href="#">Student</a>
     </div>
