--- a/crud_escola/src/main/resources/templates/index.html
+++ b/crud_escola/src/main/resources/templates/index.html
@@ -1,26 +1,45 @@
-<!DOCTYPE html  >
+<!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Escola XYZ</title>
   <link rel="stylesheet" th:href="@{style.css}">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
-    <div class="carousel-container">
-      <div class="carousel">
-        <img th:src="@{foto1.jpg}" alt="Imagem 1">
-        <img th:src="@{foto2.jpg}" alt="Imagem 1">
-        <img th:src="@{foto3.jpg}" alt="Imagem 1">
+  <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img  th:src="@{img/foto1.jpg}" class="d-block w-100" alt="...">
       </div>
-      <button class="prev-btn">&#10094;</button>
-      <button class="next-btn">&#10095;</button>
+      <div class="carousel-item">
+        <img  th:src="@{img/foto2.jpg}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img  th:src="@{img/foto3.jpg}" class="d-block w-100" alt="...">
+      </div>
     </div>
-    
-    <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
 </body>
 <script th:rc="@{script.js}"></script>
+
 </html>
