--- a/crud_escola/src/main/resources/static/style.css
+++ b/crud_escola/src/main/resources/static/style.css
@@ -1,90 +1,3 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .logo h1 {
-    margin: 0;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  
-  nav ul li:last-child {
-    margin-right: 0;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  
-  nav ul li a:hover {
-    color: #ffd700;
-  }
-  
-  .accesso a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 20px;
-  }
-  .accesso  {
-    display: flex;
-  }
-  .accesso a:hover {
-    color: #ffd700;
-  }
-  .carousel-container {
-    position: relative;
-    max-width: 600px; /* ajuste conforme necessário */
-    margin: 0 auto;
-  }
-  
-  .carousel {
-    display: flex;
-    overflow: hidden;
-  }
-  
-  .carousel img {
-    width: 100%;
-    transition: transform 0.5s ease;
-  }
-  
-  .prev-btn, .next-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    cursor: pointer;
-    padding: 10px;
-    z-index: 1;
-  }
-  
-  .prev-btn {
-    left: 0;
-  }
-  
-  .next-btn {
-    right: 0;
-  }
-  
+footer{
+  margin-bottom: auto;
+}
