--- a/crud_escola/src/main/resources/templates/fragmentos/footer.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/footer.html
@@ -1,12 +1,10 @@
-<footer>
-    <div class="footer-content">
-      <h2>Entre em contato</h2>
-      <p>Endereço: Av. Principal, 1234</p>
-      <p>Email: contato@escolaxyz.com</p>
-      <p>Telefone: (00) 1234-5678</p>
-    </div>
-    <video autoplay loop muted>
-      <source src="video.mp4" type="video/mp4">
-      Desculpe, seu navegador não suporta vídeos HTML5 com reprodução automática.
-    </video>
-  </footer>
+<footer class="py-3 my-4">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+  </ul>
+  <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+</footer>
