--- a/crud_escola/src/main/resources/static/style.css
+++ b/crud_escola/src/main/resources/static/style.css
@@ -1,3 +1,6 @@
-footer{
-  margin-bottom: auto;
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 20px; /* Espaçamento interno do rodapé */
 }
