--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -8,8 +8,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="/home">Home</a>
-        <a class="nav-link" href="login-adm">Features</a>
-        <a class="nav-link" href="cad_adm">Pricing</a>
+        <a class="nav-link" href="login-adm">Login</a>
+        <a class="nav-link" href="cad-adm">Cadastre-se</a>
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
       </div>
     </div>
