--- a/crud_escola/src/main/resources/static/styleLogin.css
+++ b/crud_escola/src/main/resources/static/styleLogin.css
@@ -1,23 +1,48 @@
-/* styleLogin.css */
-/* Add your styles for login page here */
-#staticEmail {
-  /* Add styles for email input */
-  /* Example styles */
-  background-color: #f2f2f2;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-  box-sizing: border-box;
+/* Estilos para o container principal */
+.container {
+  height: 80vh; /* Altura total da viewport */
+  display: flex;
+  justify-content: center; /* Centralizar horizontalmente */
+  align-items: center; /* Centralizar verticalmente */
 }
 
-#inputPassword {
-  /* Add styles for password input */
-  /* Example styles */
-  background-color: #f2f2f2;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-  box-sizing: border-box;
+/* Estilos para o formulário de login */
+.login-container {
+  width: 300px; /* Largura do formulário */
+  background-color: #f9f9f9; /* Cor de fundo do formulário */
+  padding: 20px;
+  border-radius: 8px; /* Arredondar as bordas */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
+.login-container h2 {
+  text-align: center; /* Alinhar o título ao centro */
+}
+
+.login-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-container input,
+.login-container button {
+  margin-bottom: 10px; /* Espaçamento entre os campos */
+  padding: 10px; /* Espaçamento interno */
+  border-radius: 4px; /* Arredondar as bordas */
+  border: 1px solid #ccc; /* Borda */
+}
+
+.login-container button {
+  background-color: #007bff; /* Cor de fundo do botão */
+  color: #fff; /* Cor do texto do botão */
+  border: none; /* Remover a borda */
+  cursor: pointer; /* Mostrar o cursor de clique */
+}
+
+.login-container button:hover {
+  background-color: #0056b3; /* Cor de fundo do botão ao passar o mouse */
+}
+#but{
+  text-decoration: none;
+  background-color: #5bbd00; /* Cor de fundo do botão */
 }
