--- a/crud_escola/src/main/resources/templates/adm/login-adm.html
+++ b/crud_escola/src/main/resources/templates/adm/login-adm.html
@@ -1,44 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escola XYZ</title>
-    <link rel="stylesheet" th:href="@{styleLogin.css}">
     <link rel="stylesheet" th:href="@{style.css}">
+    <link rel="stylesheet" th:href="@{styleLogin.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
-
-    <form action="">
-        <div class="mb-3 row">
-            <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+    <div class="container">
+        <div class="login-container">
+            <h2>Login-ADM</h2>
+            <form>
+                <input type="text" placeholder="Usuário" required>
+                <input type="password" placeholder="Senha" required>
+                <button type="submit">Entrar</button>
+            </form>
+            <div class="mt-3 text-center">
+                <a href="esqueceu-senha">Esqueceu senha?</a>
             </div>
+         <button type="button"  class="btn btn-success mt-3 d-block mx-auto" id="but" >Criar Nova Conta </button>
         </div>
-        <div class="mb-3 row">
-            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword">
-            </div>
-        </div>
-    </form>
-    <div class="but">
-        <a href="/cad-adm"><button class="btn btn-block btn-login"><i
-            class="fas fa-sign-in-alt"></i> Cadastrar</button></a>
-
     </div>
     <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script th:src="@{script.js}"></script>
 </body>
+<script th:rc="@{script.js}"></script>
 
 </html>
