--- a/crud_escola/src/main/resources/templates/cadastro.html
+++ b/crud_escola/src/main/resources/templates/cadastro.html
@@ -42,10 +42,13 @@
                                 <div class="mb-3">
                                     <input type="password" class="form-control" placeholder="Confirmar Senha">
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-user-plus" ></i> Cadastrar</button>
+                                <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-user-plus"
+                                        id="but"></i> Cadastrar</button>
                             </form>
-                            <div class="mt-3 text-center">
-                                <a href="login-adm">Já tem uma conta?</a>
+                            <div class="col-5">
+                                <div class="mt-3 text-center">
+                                    <a href="login">Já tem uma conta?</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +56,7 @@
             </div>
         </div>
     </div>
-    
+
     <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
     <!-- Bootstrap JS, jQuery, Popper.js -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
