--- a/crud_escola/src/main/resources/templates/index.html
+++ b/crud_escola/src/main/resources/templates/index.html
@@ -18,11 +18,9 @@
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img  th:src="@{img/foto1.jpg}" class="d-block w-100" alt="...">
-      </div>
+        <img  th:src="@{img/foto3.jpg}" class="d-block w-100" alt="...">      </div>
       <div class="carousel-item">
-        <img  th:src="@{img/foto2.jpg}" class="d-block w-100" alt="...">
-      </div>
+        <img  th:src="@{img/foto3.jpg}" class="d-block w-100" alt="...">      </div>
       <div class="carousel-item">
         <img  th:src="@{img/foto3.jpg}" class="d-block w-100" alt="...">
       </div>
