--- a/crud_escola/src/main/resources/templates/adm/login-adm.html
+++ b/crud_escola/src/main/resources/templates/adm/login-adm.html
@@ -19,9 +19,9 @@
     <div class="container">
         <div class="login-container">
             <h2>Login-ADM</h2>
-            <form>
-                <input type="text" placeholder="Usuário" required>
-                <input type="password" placeholder="Senha" required>
+            <form action="logar-adm" method="post">
+                <input type="text" placeholder="Usuário" required name="nome">
+                <input type="password" placeholder="Senha" required name="senha">
                 <button type="submit">Entrar</button>
             </form>
             <div class="mt-3 text-center">
