--- a/crud_escola/src/main/resources/templates/adm/cad-adm.html
+++ b/crud_escola/src/main/resources/templates/adm/cad-adm.html
@@ -26,7 +26,7 @@
                             <h3>Cadastro-ADM</h3>
                         </div>
                         <div class="card-body">
-                            <form method="post">
+                            <form action="cad-adm" method="post">
                                 <div class="mb-3">
                                     <input type="text" class="form-control" placeholder="Nome" name="nome">
                                 </div>
