--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -10,6 +10,7 @@
         <a class="nav-link active" aria-current="page" href="/home">Home</a>
         <a class="nav-link" href="login-adm">Login</a>
         <a class="nav-link" href="cad-adm">Cadastre-se</a>
+        <a class="nav-link" href="cadastro">Cadastro</a>
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
       </div>
     </div>
