--- a/crud_escola/src/main/resources/templates/adm/login-adm.html
+++ b/crud_escola/src/main/resources/templates/adm/login-adm.html
@@ -16,18 +16,23 @@
 
 <body>
     <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
+   <h2> <div class="mensagem"><span th:text="${msg}" th:class="${cor}"></span></div></h2>
+    
     <div class="container">
+        <!-- mensagem -->
+      
         <div class="login-container">
             <h2>Login-ADM</h2>
-            <form action="logar-adm" method="post">
-                <input type="text" placeholder="Usuário" required name="nome">
+            <form action="acesso-adm" method="post">
+                <input type="text" placeholder="CPF" required name="cpf">
                 <input type="password" placeholder="Senha" required name="senha">
                 <button type="submit">Entrar</button>
             </form>
             <div class="mt-3 text-center">
                 <a href="esqueceu-senha">Esqueceu senha?</a>
             </div>
-         <button type="button"  class="btn btn-success mt-3 d-block mx-auto" id="but" >Criar Nova Conta </button>
+            <a href="cad-adm"> <button type="button" class="btn btn-success mt-3 d-block mx-auto" id="but">Criar Nova
+                    Conta </button></a>
         </div>
     </div>
     <div th:insert="~{fragmentos/footer :: footer}"><!-- barra de menu -->...</div>
