--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -11,6 +11,16 @@
         <a class="nav-link" href="login-adm">Login</a>
         <a class="nav-link" href="cad-adm">Cadastre-se</a>
         <a class="nav-link" href="cadastro">Cadastro</a>
+        <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown link
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li> 
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
       </div>
     </div>
