--- a/crud_escola/src/main/resources/templates/interna/cadastroAluno.html
+++ b/crud_escola/src/main/resources/templates/interna/cadastroAluno.html
@@ -23,7 +23,7 @@
                 <div class="register-container">
                     <div class="card">
                         <div class="card-header">
-                            <h3>Cadastro-ADM</h3>
+                            <h3>Cadastro Do Aluno </h3>
                         </div>
                         <div class="card-body">
                             <form method="post">
