--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -7,18 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="/home">Home</a>
-        <a class="nav-link" href="login-adm">Login</a>
-        <a class="nav-link" href="cad-adm">Cadastre-se</a>
-        <a class="nav-link" href="cadastro">Cadastro</a>
+        <a class="nav-link active" aria-current="page" href="/home">Home</a>   
+        <a class="nav-link" href="Sobre">Sobre</a>
         <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown link
+                   Faça Login
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="login-prof">Login Professor</a></li>
+                    <li><a class="dropdown-item" href="login-aluno">Login Aluno</a></li>
+                    <li><a class="dropdown-item" href="login-adm">Secretaria</a></li>
                   </ul>
                 </li> 
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
