--- a/crud_escola/src/main/resources/templates/login-aluno.html
+++ b/crud_escola/src/main/resources/templates/login-aluno.html
@@ -19,7 +19,7 @@
     <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu -->...</div>
     <div class="container">
         <div class="login-container">
-            <h2>Login</h2>
+            <h2>Login do Aluno</h2>
             <form>
                 <input type="text" placeholder="Usuário" required>
                 <input type="password" placeholder="Senha" required>
