--- a/crud_escola/src/main/resources/static/styleCad.css
+++ b/crud_escola/src/main/resources/static/styleCad.css
@@ -39,3 +39,16 @@
     align-items: center; /* Centralizar verticalmente */
     text-decoration: none;
 }
+.mensagem {
+    display: block;
+    text-align: center;
+  
+    padding: 5px;
+    margin: 10px auto;
+    width: 50%; /* Ajuste conforme necessário */
+  }
+  .verde{
+    color: green
+  }.vermelho{
+    color: red;
+  }
