--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -17,6 +17,8 @@
                     <li><a class="dropdown-item" href="login-prof">Login Professor</a></li>
                     <li><a class="dropdown-item" href="login-aluno">Login Aluno</a></li>
                     <li><a class="dropdown-item" href="login-adm">Secretaria</a></li>
+                    <li><a class="dropdown-item" href="cad-aluno">Cadastro De Aluno</a></li>
+                    <li><a class="dropdown-item" href="cad-prof">Cadastro De Professor</a></li>
                   </ul>
                 </li> 
         <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
