--- a/crud_escola/src/main/resources/templates/adm/cad-adm.html
+++ b/crud_escola/src/main/resources/templates/adm/cad-adm.html
@@ -16,7 +16,7 @@
 
 <body>
     <div th:insert="~{fragmentos/header :: header}"></div>
-
+    <h2> <div class="mensagem"><span th:text="${msg}" th:class="${cor}"></span></div></h2>
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
