--- a/crud_escola/src/main/resources/templates/cad-prof.html
+++ b/crud_escola/src/main/resources/templates/cad-prof.html
@@ -16,7 +16,7 @@
 
 <body>
     <div th:insert="~{fragmentos/header :: header}"></div>
-
+    <h2> <div class="mensagem"><span th:text="${msg}" th:class="${cor}"></span></div></h2>
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-6">
@@ -40,7 +40,7 @@
                                     <input type="password" class="form-control" placeholder="Senha" name="senha">
                                 </div>
                                 <div class="mb-3">
-                                    <input type="password" class="form-control" placeholder="Confirmar Senha">
+                                    <input type="password" class="form-control" placeholder="Confirmar Senha" required>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-user-plus" ></i> Cadastrar</button>
                             </form>
