--- a/crud_escola/src/main/resources/templates/interna/cadastroAluno.html
+++ b/crud_escola/src/main/resources/templates/interna/cadastroAluno.html
@@ -26,22 +26,14 @@
                             <h3>Cadastro Do Aluno </h3>
                         </div>
                         <div class="card-body">
-                            <form method="post">
-                                <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Nome" name="nome">
-                                </div>
+                            <form method="post" action="Pre-Cad-Aluno">
                                 <div class="mb-3">
                                     <input type="text" class="form-control" placeholder="CPF" name="cpf">
                                 </div>
                                 <div class="mb-3">
-                                    <input type="email" class="form-control" placeholder="Email" name="email">
-                                </div>
-                                <div class="mb-3">
                                     <input type="password" class="form-control" placeholder="Senha" name="senha">
                                 </div>
-                                <div class="mb-3">
-                                    <input type="password" class="form-control" placeholder="Confirmar Senha">
-                                </div>
+                               
                                 <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-user-plus"
                                         id="but"></i> Cadastrar</button>
                             </form>
