--- a/crud_escola/src/main/resources/templates/interna/cadastroProf.html
+++ b/crud_escola/src/main/resources/templates/interna/cadastroProf.html
@@ -26,15 +26,9 @@
                             <h3>Cadastro Do Professor </h3>
                         </div>
                         <div class="card-body">
-                            <form method="post">
-                                <div class="mb-3">
-                                    <input type="text" class="form-control" placeholder="Nome" name="nome">
-                                </div>
+                            <form method="post" action="pre-cad-Prof">
                                 <div class="mb-3">
                                     <input type="text" class="form-control" placeholder="CPF" name="cpf">
-                                </div>
-                                <div class="mb-3">
-                                    <input type="email" class="form-control" placeholder="Email" name="email">
                                 </div>
                                 <div class="mb-3">
                                     <input type="password" class="form-control" placeholder="Senha" name="senha">
