--- a/crud_escola/src/main/resources/templates/cad-aluno.html
+++ b/crud_escola/src/main/resources/templates/cad-aluno.html
@@ -41,7 +41,7 @@
                                     <input type="password" class="form-control" placeholder="Senha" name="senha">
                                 </div>
                                 <div class="mb-3">
-                                    <input type="password" class="form-control" placeholder="Confirmar Senha" required>
+                                    <input type="password" class="form-control" placeholder="Confirmar Senha" name="confirmarSenha" required>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-user-plus" ></i> Cadastrar</button>
                             </form>
