--- a/crud_escola/src/main/resources/templates/login-aluno.html
+++ b/crud_escola/src/main/resources/templates/login-aluno.html
@@ -21,8 +21,8 @@
         <div class="login-container">
             <h2>Login do Aluno</h2>
             <form>
-                <input type="text" placeholder="Usuário" required>
-                <input type="password" placeholder="Senha" required>
+                <input type="text" placeholder="Usuário" name="senha" required>
+                <input type="password" placeholder="Senha" name="senha" required>
                 <button type="submit">Entrar</button>
             </form>
             <div class="mt-3 text-center">
