--- a/crud_escola/src/main/resources/templates/fragmentos/header.html
+++ b/crud_escola/src/main/resources/templates/fragmentos/header.html
@@ -1,14 +1,14 @@
 <header><nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/home">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="/home">Home</a>   
-        <a class="nav-link" href="Sobre">Sobre</a>
+        <a class="nav-link active" aria-current="page" href="home">Home</a>   
+        <a class="nav-link active" aria-current="page" href="sobre">Sobre</a>
         <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                    Faça Login
