--- a/crud_escola/src/main/resources/templates/interna/cadastroAluno.html
+++ b/crud_escola/src/main/resources/templates/interna/cadastroAluno.html
@@ -31,7 +31,7 @@
                                     <input type="text" class="form-control" placeholder="CPF" name="cpf" required>
                                 </div>
                                 <div class="mb-3">
-                                    <input type="password" class="form-control" placeholder="Senha" name="senha" required>
+                                    <input type="text" class="form-control" placeholder="Nome" name="nome" required>
                                 </div>
                                
                                 <button type="submit" class="btn btn-primary btn-block"><i class="fas fa-user-plus"
