--- a/crud_escola/src/main/resources/templates/interna/interna-adm.html
+++ b/crud_escola/src/main/resources/templates/interna/interna-adm.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Escola XYZ</title>
+  <link rel="stylesheet" th:href="@{styleCad.css}">
+
   <link rel="stylesheet" th:href="@{style.css}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -16,6 +18,7 @@
 
 <body>
     <div th:insert="~{fragmentos/header :: header}"><!-- barra de menu --></div>
+    <h2> <div class="mensagem"><span th:text="${msg}" th:class="${cor}"></span></div></h2>
 
     <div class="container mt-5">
         <h1 class="text-center mb-4">PÁGINA INTERNA</h1>
@@ -25,8 +28,8 @@
             <ul class="list-group">
              <a href="/cadastroAluno">  <li class="list-group-item" >Pre-Cadastro Aluno </li></a> 
              <a href="/cadastroProf">    <li class="list-group-item">Pre-Cadastro Prof</li></a> 
-              <a href="/internaProf">   <li class="list-group-item">paginas do Professor</li></a> 
-                <a href="/internaAluno">   <li class="list-group-item">Pagina do Aluno </li></a> 
+             <a href="/internaProf">   <li class="list-group-item">paginas do Professor</li></a> 
+             <a href="/internaAluno">   <li class="list-group-item">Pagina do Aluno </li></a> 
                 
             </ul>
         </div>
